# Python-Discord-Bot-Template

./: README.md  bot.py  config.json  fa.py  pyproject.toml
cogs/: dropdown.py  fa.py  general.py
