[tool.poetry]
name = "repl_nix_Python-Discord-Bot-Template"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.1.0"
aiohttp = "^3.8.3"
aiosqlite = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
